product detail page

--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
     <script type="text/javascript" src="public/navigation/header.js"></script>
     <script type="text/javascript" src="public/navigation/footer.js"></script>
     <script type="text/javascript" src="public/products/products.js"></script>
+    <script type="text/javascript" src="public/product/product.js"></script>
   </body>
 </html>
