--- a/public/navigation/footer.html
+++ b/public/navigation/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer navbar navbar-default navbar-fixed-bottom">
+<footer class="footer navbar navbar-default">
   <div class="container-fluid">
     <p class="text-center text-muted">Site fait par : <a href="http://www.wcantin.ca">William Cantin</a></p>
   </div>
