--- a/public/products/productslist.html
+++ b/public/products/productslist.html
@@ -1,13 +1,13 @@
-<div class="col-md-12" ng-controller="ProductsController">
-  <div class="media" ng-repeat="product in products">
-    <div class="media-left media-middle">
-      <a href="#">
-        <img class="media-object media-object__small" ng-src="{{product.image}}" alt="...">
-      </a>
+<div class="row">
+  <div class="col-md-12" ng-controller="ProductsController">
+    <div class="col-md-4" ng-repeat="product in products">
+        <a ui-sref="product({productId : {{product.Id}} })" class="thumbnail">
+          <img ng-src="{{product.image}}" alt="...">
+        </a>
+        <div class="">
+          <h4 class="">{{product.name}}<span class="badge">{{product.price}}$</span></h4>
+          {{product.description}}
+        </div>
     </div>
-    <div class="media-body">
-      <h4 class="media-heading">{{product.name}}<span class="badge">{{product.price}}$</span></h4>
-      {{product.description}}
-    </div>
-</div>
+  </div>
 </div>
