--- a/public/product/product.html
+++ b/public/product/product.html
@@ -4,7 +4,7 @@
       <img src="{{product.image}}" alt="...">
       <div class="caption">
         <h3>{{product.name}}</h3>
-        <h4>Prix : <span class="badge">{{product.price}}$</span></h4>
+        <h4>Prix : <span class="badge">{{product.price | currency:"$":0}}</span></h4>
         <p><strong>{{product.description}}</strong></p>
         <p><a href="#" class="btn btn-primary" role="button">Acheter</a> <a href="#" class="btn btn-default" role="button">Retour au produits</a></p>
       </div>
