--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
       }
     }
   });
-  System.import('app/main').then(null, console.error.bind(console));
+  System.import('gitest/touski-clothing/app/main').then(null, console.error.bind(console));
   </script>
 </html>
