--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   <head>
     <title>Angular 2 QuickStart</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="gitest/touski-clothing/content/styles.css">
-    <link rel="stylesheet" href="gitest/touski-clothing/libs/bootstrap/bootstrap.css">
+    <link rel="stylesheet" href="/content/styles.css">
+    <link rel="stylesheet" href="/libs/bootstrap/bootstrap.css">
     <base href="/">
   </head>
   <!-- Display the application -->
