--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <title>Angular 2 QuickStart</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/gitest/touski-clothing/content/styles.css">
-    <link rel="stylesheet" href="/gitest/touski-clothing/libs/bootstrap/bootstrap.css">
+    <!-- <link rel="stylesheet" href="/gitest/touski-clothing/libs/bootstrap/bootstrap.css"> -->
+    <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css" integrity="sha384-XXXXXXXX" crossorigin="anonymous">
     <base href="/">
   </head>
   <!-- Display the application -->
@@ -34,6 +35,6 @@
       }
     }
   });
-  System.import('gitest/touski-clothing/app/main').then(null, console.error.bind(console));
+  System.import('/gitest/touski-clothing/app/main').then(null, console.error.bind(console));
   </script>
 </html>
