--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
       }
     }
   });
-  System.import('/gitest/touski-clothing/app/main').then(null, console.error.bind(console));
+  System.import('/gitest/touski-clothing/app/main.js').then(null, console.error.bind(console));
   </script>
 </html>
