--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/gitest/touski-clothing/content/styles.css">
     <!-- <link rel="stylesheet" href="/gitest/touski-clothing/libs/bootstrap/bootstrap.css"> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css">
-    <base href="/">
+    <base href="gitest/touski-clothing/">
   </head>
   <!-- Display the application -->
   <body>
@@ -35,6 +35,6 @@
       }
     }
   });
-  System.import('/gitest/touski-clothing/app/main.js').then(null, console.error.bind(console));
+  System.import('gitest/touski-clothing/app/main').then(null, console.error.bind(console));
   </script>
 </html>
