--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Angular 2 QuickStart</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/content/styles.css">
+    <link rel="stylesheet" href="./content/styles.css">
     <!-- <link rel="stylesheet" href="/gitest/touski-clothing/libs/bootstrap/bootstrap.css"> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css">
     <base href="gitest/touski-clothing/">
@@ -13,18 +13,18 @@
   </body>
   <!-- Load libraries -->
   <!-- IE required polyfills, in this exact order -->
-  <script src="/node_modules/es6-shim/es6-shim.min.js"></script>
-  <script src="/node_modules/systemjs/dist/system-polyfills.js"></script>
-  <script src="/node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
-  <script src="/node_modules/angular2/bundles/angular2-polyfills.js"></script>
-  <script src="/node_modules/systemjs/dist/system.src.js"></script>
-  <script src="/node_modules/rxjs/bundles/Rx.js"></script>
-  <script src="/node_modules/angular2/bundles/angular2.dev.js"></script>
-  <script src="/node_modules/angular2/bundles/router.dev.js"></script>
+  <script src="./node_modules/es6-shim/es6-shim.min.js"></script>
+  <script src="./node_modules/systemjs/dist/system-polyfills.js"></script>
+  <script src="./node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
+  <script src="./node_modules/angular2/bundles/angular2-polyfills.js"></script>
+  <script src="./node_modules/systemjs/dist/system.src.js"></script>
+  <script src="./node_modules/rxjs/bundles/Rx.js"></script>
+  <script src="./node_modules/angular2/bundles/angular2.dev.js"></script>
+  <script src="./node_modules/angular2/bundles/router.dev.js"></script>
 
-  <script src="/libs/tether/tether.js"></script>
-  <script src="/libs/jquery/jquery.js"></script>
-  <script src="/libs/bootstrap/bootstrap.js"></script>
+  <script src="./libs/tether/tether.js"></script>
+  <script src="./libs/jquery/jquery.js"></script>
+  <script src="./libs/bootstrap/bootstrap.js"></script>
   <!-- Configure SystemJS -->
   <script>
   System.config({
