--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="./content/styles.css">
     <!-- <link rel="stylesheet" href="/gitest/touski-clothing/libs/bootstrap/bootstrap.css"> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css">
-    <base href="gitest/touski-clothing/">
+    <base href="/">
   </head>
   <!-- Display the application -->
   <body>
