--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
   </body>
   <!-- Load libraries -->
   <!-- IE required polyfills, in this exact order -->
-  <script src="./node_modules/es6-shim/es6-shim.min.js"></script>
-  <script src="./node_modules/systemjs/dist/system-polyfills.js"></script>
-  <script src="./node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
-  <script src="./node_modules/angular2/bundles/angular2-polyfills.js"></script>
-  <script src="./node_modules/systemjs/dist/system.src.js"></script>
-  <script src="./node_modules/rxjs/bundles/Rx.js"></script>
-  <script src="./node_modules/angular2/bundles/angular2.dev.js"></script>
-  <script src="./node_modules/angular2/bundles/router.dev.js"></script>
+  <script src="/node_modules/es6-shim/es6-shim.min.js"></script>
+  <script src="/node_modules/systemjs/dist/system-polyfills.js"></script>
+  <script src="/node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
+  <script src="/node_modules/angular2/bundles/angular2-polyfills.js"></script>
+  <script src="/node_modules/systemjs/dist/system.src.js"></script>
+  <script src="/node_modules/rxjs/bundles/Rx.js"></script>
+  <script src="/node_modules/angular2/bundles/angular2.dev.js"></script>
+  <script src="/node_modules/angular2/bundles/router.dev.js"></script>
 
-  <script src="./libs/tether/tether.js"></script>
-  <script src="./libs/jquery/jquery.js"></script>
-  <script src="./libs/bootstrap/bootstrap.js"></script>
+  <script src="/libs/tether/tether.js"></script>
+  <script src="/libs/jquery/jquery.js"></script>
+  <script src="/libs/bootstrap/bootstrap.js"></script>
   <!-- Configure SystemJS -->
   <script>
   System.config({
